<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ExamenAndroid</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <!-- PANTALLA PRINCIPAL -->
    <string name="textoBienvenida">Bienvenido a Transportes Android</string>
    <string name="botonPrincipal">Empezar</string>
    <string name="title_activity_opciones">Opciones</string>

    <!-- OPCIONES -->
    <string name="textoSpinner">Selecciona:</string>
    <string name="textoRadioButton">Selecciona:</string>
    <string name="radioUno">Tarifa normal</string>
    <string name="radioDos">Tarifa urgente</string>
    <string name="textoNumero">Introduce el peso del paquete:</string>
    <string name="verPrecio">Ver precio</string>
    <string name="cajaRegalo">Caja regalo</string>
    <string name="tarjetaDedicada">Con tarjeta dedicada</string>
    <string name="title_activity_pantalla2">Comprar</string>
    <string name="title_activity_acerca_de">AcercaDe</string>
    <!-- ACERCA DE -->
    <string name="acerca_de">Examen de android. El calculo de el precio final está en el código.</string>
    <string name="title_activity_dibujo">Dibujo</string>

</resources>
